# vk-pathtracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
assets/: suzanne.glb  test.glb  untitled.glb
assets/models/: cloth.glb  quad.glb  smooth.glb  triangle.glb
assets/scenes/: ClothDragon.yaml  CornellBox.yaml  CornellBoxClosed.yaml  CornellBoxClosedSuzanne.yaml  CornellBoxDragon.yaml  CornellBoxFocus.yaml  CornellBoxSpecular.yaml  CornellBoxSpecularMesh.yaml  CornellMirrorBox.yaml  DragonMirrorBox.yaml  GlassDragon.yaml  GlowMesh.yaml  LucyWinter.yaml  OutdoorDragon.yaml  OutdoorSphere.yaml  Spheres.yaml  Suzanne.yaml  Suzanne2.yaml  monkey.yaml  monkey.yml  spheredemo.yml  spheres.yaml
shaders/: display.frag  display.vert
src/: Application.cpp  Application.h  main.cpp
src/Core/: Constants.h
src/Core/BVH/: BVH.cpp  BVH.h  Bounds.cpp  Bounds.h  Builder.cpp  Builder.h  Split.cpp  Split.h  Stats.cpp  Stats.h
src/Core/File/: FilePicker.cpp  FilePicker.h  GLTFLoader.cpp  GLTFLoader.h  SceneLoader.cpp  SceneLoader.h
src/Core/IO/: FilePicker.cpp  FilePicker.h  GLTFLoader.cpp  GLTFLoader.h  SceneLoader.cpp  SceneLoader.h
src/Core/Interface/: CameraControl.cpp  CameraControl.h  MaterialEditor.cpp  MaterialEditor.h  ObjectEditor.cpp  ObjectEditor.h  UserInterface.cpp  UserInterface.h
src/Core/Loader/: FilePicker.cpp  FilePicker.h  GLTFLoader.cpp  GLTFLoader.h  SceneLoader.cpp  SceneLoader.h
src/Core/Types/: AABB.h  BVH.h  Camera.h  Material.h  Math.h  Mesh.h  Scene.h  SceneObject.h  Sphere.h  Triangle.h  Vec3.h
src/Core/Utils/: Matrix.cpp  Matrix.h
src/ImGui/backends/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/Interface/: Loader.cpp  Loader.h  UserInterface.cpp  UserInterface.h
src/Shaders/: Graphics.frag  Graphics.vert  Scene.glsl
src/Shaders/BSDF/: Diffuse.glsl  Evaluate.glsl  Glass.glsl  Metallic.glsl  Specular.glsl
src/Shaders/BxDF/: Diffuse.glsl  Glass.glsl  Specular.glsl
src/Shaders/Core/: AABB.glsl  Common.glsl  Mesh.glsl  Random.glsl  Ray.glsl  Scene.glsl  Sphere.glsl  Triangle.glsl
src/Shaders/Objects/: Common.glsl  Ray.glsl  Sphere.glsl
src/Shaders/Utility/: GGX.glsl
src/Vulkan/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  DebugMessenger.cpp  DebugMessenger.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  ImageView.cpp  ImageView.h  Instance.cpp  Instance.h  Interface.cpp  Interface.h  RenderPass.cpp  RenderPass.h  Scene.h  SceneManager.cpp  SceneManager.h  SceneUniform.cpp  SceneUniform.h  Semaphore.cpp  Semaphore.h  ShaderModule.cpp  ShaderModule.h  Surface.cpp  (+10 more)
